<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WebCatapult</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_country_code">Select country code</string>
    <string name="action_rating_limit">Select rating limit</string>
    <string name="FindWebsiteButton">Next Website</string>
    <string name="OpenWebsiteButton">Open in browser</string>
    <string name="ratingText">  Ratings -</string>
    <string name="addressText"> Address -</string>
    <string name="EnterCountryCodeMessage">Enter country ISO code to limit resuts to that country.Example  -  "US","ES".</string>
    <string name="countryCodeHint">Enter country code here</string>
    <string name="confirmCountryCode">confirm selected code</string>
    <string name="websiteDescription">Site Description</string>
     <string name="selectRatingLimit">Limit results by Rating </string>
     <string name="one_thousand">Limit to first 1000 webSites </string>
     <string name="ten_thousand">Limit to first 10000 webSites </string>
      <string name="hundred_thousand">Limit to first 100000 webSites </string>
      <string name="limitRatingsButtonText">confirm selected limit </string>
</resources>