<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.webcatapult.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ratingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratingText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@id/ratingLabel" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addressText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/addressLabel" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/websiteDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/websiteDescription"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/websiteDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/websiteDescriptionLabel" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="bottom" >

        <Button
            android:id="@+id/findWebsiteButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="nextWebsite"
            android:text="@string/FindWebsiteButton" />

        <Button
            android:id="@+id/openInBrowserButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/findWebsiteButton"
            android:enabled="false"
            android:onClick="openWebSite"
            android:text="@string/OpenWebsiteButton" />
    </RelativeLayout>

</RelativeLayout>